<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    <include layout="@layout/title"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>
     <include layout="@layout/cycle_picture"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp" 
        android:background="#ffffff"/>
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      	<Button
        	android:id="@+id/my_info_option"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bt_from1"
        	android:drawableTop="@drawable/my_info_option_bg"
        	android:text="@string/my_info_option_text"/>
     	<Button
        	android:id="@+id/auto_beauty_option"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bt_from1"
        	android:drawableTop="@drawable/auto_beauty_option_bg"
        	android:text="@string/auto_beauty_option_text"/>
     	<Button
        	android:id="@+id/auto_repair_option"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bt_from1"
        	android:drawableTop="@drawable/auto_repair_option_bg"
        	android:text="@string/auto_repair_option_text"/>
     </LinearLayout>
     <LinearLayout
     	android:layout_width="match_parent"
     	android:layout_height="match_parent"
     	android:orientation="horizontal">
     	<Button
        	android:id="@+id/auto_part_option"
        	android:layout_width="0dp"
        	android:layout_weight="1"
       		android:layout_height="wrap_content"
       		android:background="@drawable/bt_from1"
       		android:drawableTop="@drawable/auto_part_option_bg"
       		android:text="@string/auto_part_option_text"/>
    	<Button
      		android:id="@+id/road_assis_option"
       		android:layout_width="0dp"
        	android:layout_weight="1"
       		android:layout_height="wrap_content"
        	android:background="@drawable/bt_from1"
        	android:drawableTop="@drawable/road_assistant_option_bg"
        	android:text="@string/road_assis_option_text"/>
    	<Button
    	    android:id="@+id/car_models_option"
    	    android:layout_width="0dp"
    	    android:layout_weight="1"
    	    android:layout_height="wrap_content"
    	    android:background="@drawable/bt_from1"
    	    android:drawableTop="@drawable/car_models_option_bg"
    	    android:text="@string/car_models_text"/>
      </LinearLayout> 
      
    

</LinearLayout>
