<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TableRow
    android:id="@+id/user_name_tabrow"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">
    <TextView
        style="@style/text_size_style"
            android:text="@string/user_name"/>
        <EditText
            android:id="@+id/register_user_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_edittext_style"
            android:maxLength="20"/>
     </TableRow>
     <TableRow
        android:id="@+id/set_sex_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
            style="@style/text_size_style"
            android:layout_gravity="center"
            android:text="@string/select_sex"/>
     	<RadioGroup
         	android:id="@+id/user_sex"
         	style="@style/match_wrap_group"
         	android:orientation="horizontal">
        <RadioButton
            android:id="@+id/register_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/register_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"/>
        </RadioGroup>
        </TableRow>
     <TableRow
        android:id="@+id/image_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/user_icon"/>
       	<Spinner
       	    android:id="@+id/register_select_image_name"
       	    android:layout_height="45dp"
       	    android:background="@drawable/login_edittext_style"
       	    style="@style/match_wrap_group"/>
     </TableRow>
     <TableRow
        android:id="@+id/password_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/register_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_edittext_style"
            android:layout_height="wrap_content"
            android:password="true"
            android:singleLine="true"/>
     </TableRow>
     <TableRow
        android:id="@+id/check_password_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/check_password"/>
        <EditText
            android:id="@+id/register_check_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edittext_style"
            android:password="true"
            android:singleLine="true"/>
     </TableRow>
     
</LinearLayout>
