<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TableRow
        android:id="@+id/info_modify_name_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
            style="@style/text_size_style"
            android:text="@string/user_name"/>
        <EditText
            android:id="@+id/info_modify_user_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_edittext_style"
            android:maxLength="20"/>
     </TableRow>
     <TableRow
        android:id="@+id/info_modify_real_name_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
            style="@style/text_size_style"
            android:text="@string/real_name"/>
        <EditText
            android:id="@+id/info_modify_user_real_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_edittext_style"
            android:singleLine="true"
            android:maxLength="20"/>
     </TableRow>
     <TableRow
         android:id="@+id/info_modify_eamil_tabrow"
         android:layout_width="match_parent"
         android:layout_margin="5dp"
         android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/info_modify_email"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_edittext_style"/>
      </TableRow>
      <TableRow
         android:id="@+id/info_modify_tel_tabrow"
         android:layout_width="match_parent"
         android:layout_margin="5dp"
         android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/tel"/>
        <EditText
            android:id="@+id/info_modify_tel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:phoneNumber="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_edittext_style"/>
      </TableRow>
       <TableRow
        android:id="@+id/info_modify_address_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/address"/>
        <EditText
            android:id="@+id/info_modify_user_address"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_edittext_style"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
     </TableRow>
     <TableRow
        android:id="@+id/info_modify_car_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/car"/>
       	<Spinner
       	    android:id="@+id/info_modify_car_name"
       	    android:layout_height="45dp"
       	    android:background="@drawable/login_edittext_style"
       	    style="@style/match_wrap_group"/>
     </TableRow>
     <TableRow
        android:id="@+id/info_modify_image_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/user_icon"/>
       	<Spinner
       	    android:id="@+id/info_modify_select_image_name"
       	    android:layout_height="45dp"
       	    android:background="@drawable/login_edittext_style"
       	    style="@style/match_wrap_group"/>
     </TableRow>
     <TableRow
        android:id="@+id/info_modify_password_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/info_modify_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_edittext_style"
            android:layout_height="wrap_content"
            android:password="true"
            android:singleLine="true"/>
     </TableRow>
     <TableRow
        android:id="@+id/info_modify_check_password_tabrow"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <TextView
             style="@style/text_size_style"
            android:text="@string/check_password"/>
        <EditText
            android:id="@+id/info_modify_check_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edittext_style"
            android:password="true"
            android:singleLine="true"/>
     </TableRow>
     
</LinearLayout>
