<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
      	<Button
        	android:id="@+id/my_car_option"
        	android:layout_width="match_parent"
        	android:layout_height="10dp"
        	android:background="@drawable/bt_from1"
        	android:drawableTop="@drawable/my_car_option_bg"
        	android:text="@string/my_car_option_text"/>
     	<Button
        	android:id="@+id/auto_beauty_option"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bt_from1"
        	android:drawableTop="@drawable/auto_beauty_option_bg"
        	android:text="@string/auto_beauty_option_text"/>
     	<Button
        	android:id="@+id/auto_repair_option"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bt_from1"
        	android:drawableTop="@drawable/auto_repair_option_bg"
        	android:text="@string/auto_repair_option_text"/>
     </LinearLayout>
     <LinearLayout
     	android:layout_width="match_parent"
     	android:layout_height="match_parent"
     	android:orientation="horizontal">
     	<Button
        	android:id="@+id/auto_part_option"
        	android:layout_width="0dp"
        	android:layout_weight="1"
       		android:layout_height="wrap_content"
       		android:background="@drawable/bt_from1"
       		android:drawableTop="@drawable/auto_part_option_bg"
       		android:text="@string/auto_part_option_text"/>
    	<Button
      		android:id="@+id/road_assis_option"
       		android:layout_width="0dp"
        	android:layout_weight="1"
       		android:layout_height="wrap_content"
        	android:background="@drawable/bt_from1"
        	android:drawableTop="@drawable/road_assistant_option_bg"
        	android:text="@string/road_assis_option_text"/>
      </LinearLayout>

</LinearLayout>
